Fixed bottom Navbar bug
Would clip if too low and cover clicks if too high

--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -151,13 +151,18 @@ $name-plate-height: calc($profile-image-size/5);
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
-    bottom: 10px;
     top: 0;
+    bottom: 10px;
     left: 50%;
     transform: translate(-50%, 0);
     justify-content: center;
     width: 100vw;
     overflow: hidden;
+    pointer-events: none;
+
+    & > * {
+        pointer-events: auto;
+    }
 }
 
 /*
